<resources>
    <string name="app_name">安全卫士</string>
    <string name="hello_world">Hello world!</string>
    <string name="Version">当前版本:</string>
    <string name="AlertDialog_update_title">有新版本啦</string>
    <string name="titlebar_app_name">安全卫士</string>
    <string name="setPwd">设置密码</string>
    <string name="setPwdDescription">请输入防盗密码</string>
    <string name="againPassword">再次输入密码</string>
    <string name="protected_no">取消</string>
    <string name="protected_ok">确定</string>
    <string name="login">请输入防盗密码</string>
    <string name="inputPassword">输入密码</string>
    <string name="guide1">欢迎使用手机防盗功能</string>
    <string name="guide1_content">防盗卫士有神马用?</string>
    <string name="guide1_item1">SIM卡变更报警</string>
    <string name="guide1_item2">GPS定位追踪</string>
    <string name="guide1_item3">远程销毁数据</string>
    <string name="guide1_item4">远程锁屏</string>
    <string name="next">下一步</string>
    <string name="guide2">2.手机卡绑定</string>
    <string name="guide2_content">绑定sim卡后,如果下次更换的另外一张sim,就会自动给绑定卡发送短信</string>
    <string name="bt_guide2_bind">绑定</string>
    <string name="cb_guide2_bind">已经绑定</string>
    <string name="previous">上一步</string>
    <string name="finish">完成</string>
    <string name="guide3_title">3.设置安全号码</string>
    <string name="select_phone">选择联系人</string>
    <string name="guide4_title">4.恭喜你,设置已经完成</string>
    <string name="guide4_content">您的手机设置已经完成</string>
    <string name="cb_guide4_protected">手机未开启保护</string>
    <string name="lostProtectedNumber">防盗保护手机号</string>
    <string name="isProtected">已开启保护</string>
    <string name="rePlayGuide">重新设置向导?</string>
    <string name="query">查询归属地</string>
    <string name="bt_query">查询</string>
    <string name="number_service">设置手机归属地服务</string>
    <string name="number_service_status">归属地服务未开启</string>
    <string name="select_bg">归属地显示风格</string>
    <string name="number_display">归属地显示位置</string>
    <string name="image_desc">图片描述</string>
    <string name="drag_view_desc">拖动紫色方块来确定归属地显示位置</string>
    <string name="number_security">通讯卫士</string>
    <string name="add">新增</string>
    <string name="update_number">更改号码</string>
    <string name="delete_number">删除号码</string>
    <string name="sms_backup">短信备份</string>
    <string name="sms_restore">短信还原</string>
    <string name="app_manager">程序管理</string>
    <string name="app_manager_load">正在载入程序列表...</string>
    <string name="app_manager_delete">卸载</string>
    <string name="app_manager_run">运行</string>
    <string name="app_manager_share">分享</string>
    <string name="app_lock">程序锁</string>
    <string name="lock">输入密码</string>
    <string name="locked__app_name">锁定程序名</string>
    <string name="input_pwd">请输入密码</string>
    <string name="ok">确定</string>
    <string name="setting">设置中心</string>
    <string name="lock_service">设置程序锁服务</string>
    <string name="lock_tips">程序锁服务未开启</string>
    <string name="process_count">进程数目</string>
    <string name="process_memory">剩余内存</string>
    <string name="process_manager">进程管理</string>
    <string name="process_manager_load">正在载入进程信息...</string>
    <string name="name">名字</string>
    <string name="memory">内存</string>
    <string name="onekey_clean">一键清理</string>
    <string name="onekey_setting">一键设置</string>
    <string name="mytoast">自定义吐司对象</string>
    <string name="security_desc">权限列表</string>
    <string name="process_setting">进程设置</string>
    <string name="process_show_setting">显示设置</string>
    <string name="show_system_process">显示系统进程</string>
    <string name="setting_lock">设置锁屏清理内存</string>
    <string name="lock_clean_process">锁屏将清理内存</string>
    <string name="process_clean">清理</string>
    <string name="common_number">常用电话查询</string>
    <string name="custom_title">通用标题</string>
    <string name="traffic_manager">流量监控</string>
    <string name="traffic">流量</string>
    <string name="title_activity_cache_clear">缓存清理</string>
    <string name="action_settings">Settings</string>
    <string name="cache_clear">缓存清理</string>
    <string name="dataSize">数据内存</string>
    <string name="about_content">本软件有杜承祯开发,不能100%保证7*24小时稳定运行,如有问题,请点击右上角,email给我您的问题,建议,反馈. 安全管家谢谢你的使用.</string>
    <string name="init_ing">手机状态可以优化\n一键体验即可处理</string>
    <string name="guide2_desc">丢失手机被换卡时,会自动发送短信到你的预设的安全手机上,帮你会的丢失手机的线索,方便您早会手机.\n当您遗忘防盗密码时,也可以通过安全号码找回防盗密码.</string>
    <string name="guide1_desc2">销毁丢失手机号上的短信,通话记录,联系人,并清除SD卡上的全部数据.防止隐私泄露,保护您的隐私安全</string>
    <string name="guide1_desc3">帮你找回遗失的手机中珍贵的联系人信息,保护您的隐私安全</string>
    <string name="guide1_desc4">发出最大声音警报,方便你巡回爱机</string>
    <string name="Launch_Enabled">防盗服务正在保护您的手机</string>
    <string name="Launch_No_SimCard">请插入SIM卡以使用防盗服务</string>
    <string name="Launch_SimCard_NotReady">您设备上的SIM卡未就绪，请稍后重试</string>
    <string name="Launch_SimCardRegistered">防盗服务检测到SIM卡更换，已经自动为您注册新SIM卡</string>
    <string name="Launch_BackupCommands">备份防盗指令至安全手机</string>
    <string name="Launch_UpdateAPK">"防盗服务正在更新设置稍后会自动重启"</string>
    <string name="Guide_SetPassword">设置防盗密码</string>
    <string name="Guide_SetPassword_Warn">防盗密码在您发送防盗指令或进入防盗功能的时候都会用得到，请您牢记</string>
    <string name="Guide_Password">密　　码:</string>
    <string name="Guide_Password_Length">密码长度1-8位</string>
    <string name="Guide_Password_Confirm">确认密码:</string>
    <string name="Guide_SetPassword_Can">设置防盗密码可以:</string>
    <string name="Guide_PhoneLocate">手机定位</string>
    <string name="Guide_PhoneLocate_Can">您可随时获取手机的当前位置，帮您找回手机。</string>
    <string name="Guide_Destroy">数据销毁</string>
    <string name="Guide_Destroy_Can">销毁丢失手机上的短信、通话记录、联系人；并清除SD卡上的全部数据。防止隐私泄漏，保护您的隐私安全。</string>
    <string name="Guide_GetData">联系人备份</string>
    <string name="Guide_GetData_Can">帮您找回遗失的手机中珍贵的联系人信息，保护您的隐私安全。</string>
    <string name="Guide_Alert">响铃报警</string>
    <string name="Guide_Alert_Can">发出最大声音报警，方便您巡回爱机。</string>
    <string name="Guide_Warn">虚拟警告</string>
    <string name="Guide_Warn_Can">发送警告消息到您遗失的手机。</string>
    <string name="Guide_SetSecurity_Number">设置安全手机号码</string>
    <string name="Guide_SetSecurity_Proposal_Number">建议您使用亲友的手机号码</string>
    <string name="Guide_Phone_Number">号　　码:</string>
    <string name="Guide_Phone_Number_Confirm">确认号码:</string>
    <string name="Guide_SetSecurity_Number_Can">设置安全手机号码可以:</string>
    <string name="Guide_Change_SMS">换卡短信通知</string>
    <string name="Guide_Change_SMS_Can">"丢失手机被换卡时，会自动发送短信到您预设的安全手机上，帮您获得丢失手机的线索，方便您找回手机。
当您遗忘防盗密码时，也可以通过安全号码找回防盗密码。"</string>
    <string name="Cmd_Locate">手机定位</string>
    <string name="Cmd_Locate_Hint">定位手机当前的位置</string>
    <string name="Cmd_Locate_Desc">"手机遗失后，您可用任意手机发送定位手机指令到您遗失的手机，获取手机的当前位置，帮您找回手机。定位手机成功后，将会发送短信告知您手机当前位置。


+定位手机的指令是：dingwei%防盗密码"</string>
    <string name="Cmd_GetPassword">找回防盗密码</string>
    <string name="Cmd_GetPassword_Hint">使用您的安全手机找回防盗密码</string>
    <string name="Cmd_GetPassword_Desc">"当您遗忘您的防盗密码时，您可以使用您设定的安全手机找回您的防盗密码。


+找回防盗密码指令是：huodemima 
注：找回密码指令必须用安全手机发送"</string>
    <string name="Cmd_Warning">虚拟警告</string>
    <string name="Cmd_Warning_Hint">发送自定义的警告信息至您的手机</string>
    <string name="Cmd_Warning_Desc">"手机遗失后，您可用任意手机发送警告消息到您遗失的手机，警告消息将会显示在屏幕上方。


+虚拟警告的指令是：jinggao%防盗密码#警告信息"</string>
    <string name="Cmd_Lock">锁定手机</string>
    <string name="Cmd_Lock_Hint">防止他人使用您的手机</string>
    <string name="Cmd_Lock_Desc">"手机遗失后，您可用任意手机发送锁定手机指令到您遗失的手机。防盗服务接收到此指令后，将会锁定手机的屏幕，避免您的隐私泄露。


+锁定手机的指令是：suoding%防盗密码"</string>
    <string name="Cmd_Alarm">响铃报警</string>
    <string name="Cmd_Alarm_Hint">令手机以最大音量持续播放报警音</string>
    <string name="Cmd_Alarm_Desc">"手机遗失后，您可用任意手机发送此命令到您遗失的手机。防盗服务接收到此命令后，将会锁定手机的屏幕，并以最大音量播放报警音乐，方便您找回您的手机。


+发出报警音的指令是：baojing%防盗密码"</string>
    <string name="Cmd_Backup">备份联系人</string>
    <string name="Cmd_Backup_Hint">备份联系人至云端</string>
    <string name="Cmd_Backup_Desc">"手机遗失后，您可用任意手机发送此命令到您遗失的手机。防盗服务接收到此命令后，将会备份联系人至云端服务器，您可以随时下载，并将其还原至您的手机。


+备份的指令是：beifen%防盗密码"</string>
    <string name="Cmd_Destroy">销毁数据</string>
    <string name="Cmd_Destroy_Hint">销毁您手机上的个人信息</string>
    <string name="Cmd_Destroy_Desc">"手机遗失后，您可用任意手机发送此命令到您遗失的手机。防盗服务接收到此命令后，将会销毁您手机上的一切个人数据，防止您的隐私泄露。


+销毁的指令是：xiaohui%防盗密码"</string>
    <string name="Cmd_Sim">换卡通知</string>
    <string name="Cmd_Sim_Hint">SIM卡更换后通知您设置的安全手机</string>
    <string name="Cmd_Sim_Desc">当您手机的SIM卡被更换后，防盗服务将会自动报告此消息至您设置的安全手机。</string>
    <string name="Cmd_AntiCamera">防盗拍照</string>
    <string name="Cmd_AntiCamera_Warn_Error">"您的设备不支持!
*防盗拍照功能需要手机具有前置摄像头
*拍照功能仅支持固件Android 2.3 及以上版本"</string>
    <string name="Cmd_AntiCamera_Hint">拍下使用者的照片</string>
    <string name="Cmd_AntiCamera_Desc">在有人登陆到防盗模块,或解锁锁定手机，连续输入错两次密码,将拍下其照片发送到安全号码.</string>
    <string name="Cmd_Result_SimChange">[.1]防盗服务提醒您: 您的手机SIM卡被更换</string>
    <string name="Cmd_Result_GetPassword">[.2]您的防盗密码是: %1$s</string>
    <string name="Cmd_Result_SimChange_Commands" formatted="false">"[.3]销毁数据：
xiaohui%防盗密码
锁定手机：
suoding%防盗密码
定位手机：
dingwei%防盗密码
响铃报警：
baojing%防盗密码
备份信息：
beifen%防盗密码
虚拟警告：
jinggao%防盗密码#警告信息
找回密码：
huodemima
注：找回密码指令必须用安全手机发送"</string>
    <string name="Cmd_Result_Locate_Literal">[.4]您的手机在%1$s附近%2$d米范围内。</string>
    <string name="Cmd_Result_Locate_Url">[.5]您也可以登录 http://www.sec.com/anti/sw?a1=%1$f&amp;a2=%2$f&amp;a3=%3$d 查看在线地图</string>
    <string name="Cmd_Result_Locate_Failed">[.6]网络暂不可用，无法获得您的手机位置。防盗服务会尝试开启网络,将会在网络连接后向您自动发送手机位置信息</string>
    <string name="Cmd_Result_Backup">[.7]通讯录已成功备份，您可以登陆 %1$s 下载</string>
    <string name="Cmd_Result_Backup_Failed">[.8]网络暂不可用，防盗服务会尝试开启网络,将会在网络连接后自动进行上传</string>
    <string name="Cmd_Result_Backup_ContastNull">[.9]防盗服务提示您：联系人列表为空,暂时无法进行备份.</string>
    <string name="Cmd_Result_AntiCamera">[.10]有人尝试解锁您的手机,已拍下其照片,请登录以下地址查看: %1$s</string>
    <string name="Demo">体验</string>
    <string name="Demo_Result_GetPassword">您的防盗密码已经发送至%1$s</string>
    <string name="Demo_Result_Commands">防盗指令已发送至%1$s</string>
    <string name="Demo_Warning_Desc">此处会显示您发送的警告语</string>
    <string name="Demo_Locate_Desc">此功能将会向您设置的安全手机发送短信报告本机当前所在位置。短信和流量费用由运营商收取。</string>
    <string name="Demo_Backup_Desc">此功能将会备份您的联系人信息，并向您设置的安全手机发送短信，短信和流量费用由运营商收取。</string>
    <string name="Pref">防盗服务设置</string>
    <string name="Pref_Service">防盗服务</string>
    <string name="Pref_Service_Enabled">已开启，您的手机正处于防盗服务的保护下</string>
    <string name="Pref_Service_Disabled">已关闭，防盗服务已停止运行</string>
    <string name="Pref_SimLock">SIM卡更换保护</string>
    <string name="Pref_SimLock_Enabled">检测到SIM更换后，将手机自动锁定</string>
    <string name="Pref_SimLock_Disabled">检测到SIM更换后，仍然可以正常操作手机</string>
    <string name="Pref_Uninstall">卸载防盗服务</string>
    <string name="Pref_Password">防盗密码</string>
    <string name="Pref_Password_Warn">防盗密码可用在登录和指令</string>
    <string name="Pref_Password_New">新密码</string>
    <string name="Pref_Password_Confirm">确认密码</string>
    <string name="Pref_Password_Title">设置防盗密码</string>
    <string name="Pref_Password_Empty">密码不能为空</string>
    <string name="Pref_Password_NotSame">两次输入密码不一致</string>
    <string name="Pref_Password_Error">密码错误</string>
    <string name="Pref_Password_Saved">密码设置成功</string>
    <string name="Pref_Phone">安全手机</string>
    <string name="Pref_Phone_Warn">可以用安全手机号获得防盗密码</string>
    <string name="Pref_Phone_New">新号码</string>
    <string name="Pref_Phone_Confirm">确认号码</string>
    <string name="Pref_Phone_Title">设置安全手机号码</string>
    <string name="Pref_Phone_Empty">号码不能为空</string>
    <string name="Pref_Phone_NotSame">两次输入号码不一致</string>
    <string name="Pref_Phone_Current">当前安全手机号码为：%1$s</string>
    <string name="Pref_Phone_Saved">安全手机号码设置成功</string>
    <string name="Lock_Password">请输入防盗密码</string>
    <string name="Lock_Forget">忘记密码？</string>
    <string name="Lock_Forget_Title">找回防盗密码</string>
    <string name="Lock_Forget_Content">"使用安全手机%1$s
发送短信huodemima至本机
即可找回您遗忘的密码"</string>
    <string name="Lock_ExitDemo">退出体验</string>
    <string name="Warning">警告</string>
    <string name="OK">确定</string>
    <string name="Wizard_Next">下一步</string>
    <string name="Wizard_Finish">完成</string>
    <string name="Wizard_Congratulation">恭喜，您已完成防盗服务设置</string>
</resources>