<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center_horizontal"
              android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/title_background"
        android:gravity="center"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lock"
            android:textColor="@android:color/white"
            android:textSize="22sp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="horizontal"
        >

        <ImageView
            android:id="@+id/iv_lock_app_icon"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:contentDescription="@string/image_desc"
            android:src="@drawable/app"
            />

        <TextView
            android:id="@+id/tv_lock_app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:text="@string/locked__app_name"
            android:textColor="#ffbc04e5"
            />
    </LinearLayout>

    <EditText
        android:id="@+id/et_lock_pwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/input_pwd"
        android:inputType="textPassword"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:onClick="confirm"
        android:text="@string/ok"
        />

</LinearLayout>
