<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <TextView
        style="@style/SetupGuideTitle"
        android:text="@string/guide2"
        android:textSize="28sp"
        />

    <TextView
        style="@style/SetupGuideUnderline"/>

    <TextView
        style="@style/SetupGuideContent"
        android:text="@string/guide2_content"
        android:textSize="20sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/bt_guide_bind_sim"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/bt_guide2_bind"/>

        <CheckBox
            android:id="@+id/cb_guide2_bind"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cb_guide2_bind"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="手机防盗"
            android:src="@drawable/point_green"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="手机防盗"
            android:src="@drawable/point_red"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="手机防盗"
            android:src="@drawable/point_green"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="手机防盗"
            android:src="@drawable/point_green"/>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical|center_horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:contentDescription="TODO"
                android:scaleType="center"
                android:src="@drawable/guide"/>
        </LinearLayout>

        <Button
            android:id="@+id/bt_guide_previous"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:text="@string/previous"/>

        <Button
            android:id="@+id/bt_guide_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:text="@string/next"/>
    </RelativeLayout>

</LinearLayout>