<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@drawable/title_background"
        android:gravity="center"
        android:text="@string/process_setting"
        android:textColor="@android:color/white"
        android:textSize="22sp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:orientation="vertical">

            <TextView
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:text="@string/process_show_setting"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/tv_process_setting_tips"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:text="@string/show_system_process"
                android:textColor="#ffff0000"
                android:textSize="14sp"/>
        </LinearLayout>

        <CheckBox
            android:id="@+id/cb_process_setting_state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"/>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:background="#ffFEBD22"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:text="@string/setting_lock"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/tv_process__clean_tips"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:text="@string/lock_clean_process"
                android:textColor="#ffff0000"
                android:textSize="14sp"/>
        </LinearLayout>

        <CheckBox
            android:id="@+id/cb_process_clean_state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"/>
    </RelativeLayout>

</LinearLayout>