<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/guide4_title"
        android:textSize="22sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/guide4_content"
        android:textSize="18sp"/>

    <CheckBox
        android:id="@+id/cb_guide4_protected"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cb_guide4_protected"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="手机防盗"
            android:src="@drawable/point_green"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="手机防盗"
            android:src="@drawable/point_green"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="手机防盗"
            android:src="@drawable/point_green"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="手机防盗"
            android:src="@drawable/point_red"/>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical|center_horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:contentDescription="TODO"
                android:scaleType="center"
                android:src="@drawable/guide"/>
        </LinearLayout>

        <Button
            android:id="@+id/bt_guide_previous"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:text="@string/previous"/>

        <Button
            android:id="@+id/bt_guide_finish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:text="@string/finish"/>
    </RelativeLayout>

</LinearLayout>