<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/ll_app_popup"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="230dp"
    android:layout_height="70dp"
    android:background="@drawable/local_popup_bg"
    android:gravity="center_vertical"
    android:orientation="horizontal">

    <LinearLayout
        android:id="@+id/ll_app_uninstall"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginLeft="8dp"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:contentDescription="@string/image_desc"
            android:scaleType="fitXY"
            android:src="@drawable/img1"/>

        <TextView
            android:layout_width="35dp"
            android:layout_height="20dp"
            android:text="@string/app_manager_delete"/>
    </LinearLayout>

    <View
        android:layout_width="1dp"
        android:layout_height="50dp"
        android:background="#FF00ff66"/>

    <LinearLayout
        android:id="@+id/ll_app_start"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:contentDescription="@string/image_desc"
            android:scaleType="fitXY"
            android:src="@drawable/img2"/>

        <TextView
            android:layout_width="35dp"
            android:layout_height="20dp"
            android:text="@string/app_manager_run"/>
    </LinearLayout>

    <View
        android:layout_width="1dp"
        android:layout_height="50dp"
        android:background="#FF00ff66"/>

    <LinearLayout
        android:id="@+id/ll_app_share"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:contentDescription="@string/image_desc"
            android:scaleType="fitXY"
            android:src="@drawable/img3"/>

        <TextView
            android:layout_width="35dp"
            android:layout_height="20dp"
            android:text="@string/app_manager_share"/>
    </LinearLayout>

</LinearLayout>